# TAU-shell

./: CMakeLists.txt  README.rst  building.md  config.txt  config_dev.txt  kill_shell.sh  log_process.sh  python_monitor.py  rpc.sh  run.sh
config/: 1.json  config_ltc.txt  config_sxs.txt  config_wqy.txt
include/handler/: alert_handler.hpp  db_util.hpp  escape_json.hpp  hex_util.hpp  response_buffer.hpp  tau_communication_webui.hpp  tau_handler.hpp
include/rpc/: auth.hpp  auth_interface.hpp  base64.hpp  json_util.hpp  webui.hpp
include/util/: base64.hpp  db_util.hpp  escape_json.hpp  hex_util.hpp  json_util.hpp  tau_constants.hpp
src/: main.cpp
src/handler/: CMakeLists.txt  alert_handler.cpp  db_util.cpp  escape_json.cpp  hex_util.cpp  jsmn.c  jsmn.h  tau_communication_webui.cpp  tau_communication_webui.hpp  tau_handler.cpp
src/rpc/: CMakeLists.txt  auth.cpp  base64.cpp  cdecode.c  jsmn.c  json_util.cpp  mongoose.c  webui.cpp
src/util/: CMakeLists.txt  base64.cpp  cdecode.c  db_util.cpp  escape_json.cpp  hex_util.cpp  json_util.cpp
